--- a/projects/rhythm/src/lib/control/control.component.html
+++ b/projects/rhythm/src/lib/control/control.component.html
@@ -1,6 +1,6 @@
 <div class="controls">
   <fieldset>
-    <legend>Rhythm</legend>
+    <legend>vRhythm</legend>
     <form [formGroup]="form">
       <label class="switch">
         <input type="checkbox" formControlName="on">
