--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,12 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1 class="mt-3 mb-3">What is Lorem Ipsum?</h1>
+      <h1 class="mb-5 mt-4">What is Lorem Ipsum?</h1>
     </div>
   </div>
   <div class="row">
     <div class="col">
-
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
@@ -14,7 +13,6 @@
         Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
         of Lorem Ipsum.
         Why do we use it?</p>
-
     </div>
     <div class="col">
       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
@@ -23,15 +21,11 @@
         packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum'
         will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
         accident, sometimes on purpose (injected humour and the like).</p>
-
-
     </div>
   </div>
   <div class="row">
     <div class="col">
-
-      <h2 class="mb-3">Where does it come from?</h2>
-
+      <h2 class="mt-3 mb-4">Where does it come from?</h2>
       <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
         literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
         College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
